--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: estRodis
-Title: What the Package Does (One Line, Title Case)
+Title: This package estimates parameters.
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Martin", "Wohlfender", , "martin.wohlfender@unibe.ch", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-License: MIT + file LICENCE
+License: `use_gpl3_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
@@ -13,12 +12,11 @@ Biarch: true
 Depends: 
     R (>= 3.4.0)
 Imports: 
-    dplyr,
     methods,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
-    rstantools (>= 2.3.1)
+    rstantools (>= 2.3.1.1)
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
