--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ import(rstantools)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(parallelly,availableCores)
 importFrom(rlang,.data)
 importFrom(rstan,sampling)
 importFrom(stats,rbinom)
