--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(estRodis_estimate_parameters_1)
 export(estRodis_estimate_parameters_2)
+export(estRodis_scaled_beta_distribution_pdf)
 export(estRodis_simulate_cluster_sizes)
+export(estRodis_simulate_transmission_chain)
 import(Rcpp)
 import(RcppParallel)
 import(methods)
