--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,14 +13,19 @@ Biarch: true
 Depends: 
     R (>= 3.4.0)
 Imports: 
+	cowplot,
     dplyr,
-	rlang,
+	ggplot2,
+	ggraph,
     methods,
+	paletteer,
 	parallelly,
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
+	rlang,
     rstan (>= 2.18.1),
-    rstantools (>= 2.3.1)
+    rstantools (>= 2.3.1),
+	tidygraph
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
