--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,29 @@ import(Rcpp)
 import(RcppParallel)
 import(methods)
 import(rstantools)
+importFrom(cowplot,get_legend)
+importFrom(cowplot,plot_grid)
 importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,theme)
+importFrom(ggraph,create_layout)
+importFrom(ggraph,geom_edge_link)
+importFrom(ggraph,geom_node_point)
+importFrom(ggraph,ggraph)
+importFrom(ggraph,scale_edge_color_manual)
+importFrom(paletteer,paletteer_c)
 importFrom(parallelly,availableCores)
 importFrom(rlang,.data)
 importFrom(rstan,sampling)
 importFrom(stats,rbinom)
 importFrom(stats,rnbinom)
+importFrom(tidygraph,tbl_graph)
 useDynLib(estRodis, .registration = TRUE)
