--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(estRodis_plot_transmission_chain)
 export(estRodis_plot_transmission_chain_mutation)
 export(estRodis_scaled_beta_distribution_pdf)
 export(estRodis_simulate_cluster_sizes)
+export(estRodis_simulate_cluster_sizes_v2)
 export(estRodis_simulate_transmission_chain)
 import(Rcpp)
 import(RcppParallel)
